2002-08-15  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc term/post.trm: Added some hyperlinks.

2002-08-15  Harald Harders  <h.harders@tu-bs.de>

	* term/post.trm: Documentation about Symbol-Oblique.

2002-08-14  Harald Harders  <h.harders@tu-bs.de>

	* src/readline.c: Remove compiler warning.

	* term/post.trm: Fix writing an error message to gpoutfile instead of
	stderr.

2002-08-01  Ethan Merritt  <merritt@u.washington.edu>

	* term/next.trm (NEXT_put_text): Fix incorrect multiplication of
 	text rotation angle by 90 degrees

	* term/openstep.trm (NEXT_put_text): Dito.

	* term/post.trm (ENHPS_put_text): Dito.

	* term/rgip.trm (RGIP_put_text): Dito.

2002-08-01  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* term/README: Updated documentation of _fillbox() terminal entry
 	previously incorrectly referred to as _boxfill().  Mention usage
 	by "with filledboxes".
	
	* src/interpol.c (cp_implode): Introduced special handling for
 	former zeroes on log axes, now represented by type==OUTRANGE,
 	value==-VERYLARGE. Avoid SIGFPE crash on Alpha.

2002-08-01  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (eval_plots): Fix buggy test if current plot style
 	is FILLEDCURVES.

	* src/set.c (set_style): Dito.

2002-07-26  Ethan Merritt  <merritt@u.washington.edu>

	* NEWS docs/gnuplot.doc demo/all.dem demo/textrotate.dem
 	src/bitmap.c src/color.c src/gadgets.h src/gplt_x11.c
 	src/graph3d.c src/graphics.c src/save.c src/set.c src/show.c
 	src/term.c term/README term/cgm.trm term/dxf.trm term/dxy.trm
 	term/eepic.trm term/emf.trm term/emxvga.trm term/fg.trm
 	term/fig.trm term/gd.trm term/gif.trm term/gnugraph.trm
 	term/gpr.trm term/hp26.trm term/hp2648.trm term/hpgl.trm
 	term/latex.trm term/linux.trm term/metapost.trm term/mif.trm
 	term/multitos.trm term/pc.trm term/pdf.trm term/pm.trm
 	term/post.trm term/pslatex.trm term/pstricks.trm term/regis.trm
 	term/svg.trm term/tgif.trm term/tpic.trm term/unixpc.trm