@@ -1,5 +1,5 @@
 /*
- * $Id: tables.h,v 1.28 2002/03/09 22:41:45 mikulik Exp $
+ * $Id: tables.h,v 1.29 2002/03/30 13:15:21 broeker Exp $
  */
 
 /* GNUPLOT - tables.h */
@@ -77,7 +77,8 @@ enum set_id {
     S_ACTIONTABLE, S_ALL, S_ANGLES, S_ARROW, S_AUTOSCALE, S_BARS, S_BORDER,
     S_BOXWIDTH, S_CLABEL, S_CLIP, S_CNTRPARAM, S_CONTOUR, S_DATA, S_FUNCTIONS,
     S_DGRID3D, S_DUMMY, S_ENCODING, S_DECIMALSIGN, S_FORMAT, S_GRID,
-    S_HIDDEN3D, S_HISTORYSIZE, S_ISOSAMPLES, S_KEY, S_KEYTITLE, S_LABEL,
+    S_HIDDEN3D, S_HISTORYSIZE, S_ISOSAMPLES, S_KEY, 
+    S_KEYTITLE, S_LABEL,
     S_LINESTYLE, S_LOADPATH, S_LOCALE, S_LOGSCALE, S_MAPPING, S_MARGIN,
     S_LMARGIN, S_RMARGIN, S_TMARGIN, S_BMARGIN, S_MISSING,
 #ifdef USE_MOUSE
@@ -126,7 +127,8 @@ enum set_key_id {
     S_KEY_OUTSIDE, S_KEY_LLEFT, S_KEY_RRIGHT, S_KEY_REVERSE, S_KEY_NOREVERSE,
     S_KEY_ENHANCED, S_KEY_NOENHANCED,
     S_KEY_BOX, S_KEY_NOBOX, S_KEY_SAMPLEN, S_KEY_SPACING, S_KEY_WIDTH,
-    S_KEY_HEIGHT, S_KEY_TITLE
+    S_KEY_HEIGHT, S_KEY_TITLE,
+    S_KEY_AUTOTITLES, S_KEY_NOAUTOTITLES
 };
 
 #ifdef PM3D
