@@ -40,6 +40,7 @@ off with the hotkey 'm'. See 'help mouse' and 'help bind' for more details.
 
 
 [3.8i]
+* NEW set key {no}autotitles
 * NEW arbitrary text rotations; 'set label ... [no]rotate [by] ...'
 * NEW set arrow ... filled | nofilled ...
 * NEW set title ... textcolor ...
